2020-08-24 Danilo Chang

    * Bump to version 0.5
    * Update hiredis files to 1.0.0

2020-05-09 Danilo Chang

    * Bump to version 0.4
    * Update hiredis files to 0.14.1

2018-10-06 Danilo Chang

    * Bump to version 0.3
    * Update hiredis files

2018-03-08 Danilo Chang

    * Add basic test cases
    * Bump to version 0.2
    * Add new sub command: appendcommand, reply
    * Update hiredis files

2016-11-26 Danilo Chang

    * Add hiredis files
    * Download sample extension
