@@ -1,3 +1,7 @@
+2021-11-27 Danilo Chang
+
+    * Update hiredis files
+
 2020-08-24 Danilo Chang
 
     * Bump to version 0.5
